Nuevo build web limpio para deploy Railway

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^8.0.1
   flutter_svg: ^2.0.10
-  logger: ^2.0.2
+  logger: 
+  url_launcher: ^6.2.5   # <-- Agregado, usa la última versión estable disponible
 
 dev_dependencies:
   flutter_test:
@@ -25,4 +26,4 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/mapa_demo_actualizado.svg
+    - assets/mapa_demo_actualizado.svg   # Asegúrate que la ruta exista
