fix: migrar envío de correo de recuperación a Brevo y reemplazo de await

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,11 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^8.0.1
   flutter_svg: ^2.0.10
-  logger: 
+  logger: any
   url_launcher: ^6.2.5
   google_maps_flutter: ^2.5.0       # <-- AGREGADO
   geolocator: ^10.0.0               # <-- AGREGADO
+  permission_handler: ^11.0.1       # <-- AGREGADO para abrir ajustes
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +30,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/mapa_demo_actualizado.svg
+    - assets/avatar_default.png
