--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,14 +13,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.1.0
   shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.2.4
+  connectivity_plus: ^6.1.4
   google_fonts: ^8.0.1
   flutter_svg: ^2.0.10
   logger: any
   url_launcher: ^6.2.5
-  google_maps_flutter: ^2.5.0       # <-- AGREGADO
-  geolocator: ^10.0.0               # <-- AGREGADO
-  permission_handler: ^11.0.1       # <-- AGREGADO para abrir ajustes
-  diacritic: ^0.1.5                 # <-- AGREGADO para normalizar ciudades
+  google_maps_flutter: ^2.5.0
+  geolocator: ^10.0.0
+  permission_handler: ^11.0.1
+  diacritic: ^0.1.5
 
 dev_dependencies:
   flutter_test:
