--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,15 +8,11 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
-    <!-- Si necesitas ubicación en background, descomenta la siguiente línea -->
-    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
-
     <application
-        android:name="io.flutter.app.FlutterApplication"
         android:label="zuvirocl_app"
         android:icon="@mipmap/ic_launcher">
 
-        <!-- Google Maps API key (tu nueva clave aquí) -->
+        <!-- Google Maps API key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyBUbQk07WHHLeDBZmHMDa2rNZId7yNBM3U"/>
@@ -31,9 +27,8 @@
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LaunchER"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!-- Otros servicios/meta-data si los necesitas -->
     </application>
 </manifest>
